<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_movie"
        android:checked="true"
        android:title="Moive"
        android:icon="@drawable/film"/>
    <item
        android:id="@+id/action_tv_show"
        android:title="Tv Show"
        android:icon="@drawable/television"/>
    <item
        android:id="@+id/action_fav"
        android:title="Favorite"
        android:icon="@drawable/ic_star_black_24dp"
        />
</menu>