...
                                android:src="@color/colorAccent"
                                app:image="@{imageCirclePosterTV}" />
                        </androidx.cardview.widget.CardView>
                    </FrameLayout>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fbFavoriteTvShow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="16dp"
                        android:backgroundTint="#fff"
...
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp">

                    <TextView
                        android:id="@+id/tvTitleDetailTvShow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:layout_toLeftOf="@id/tvSeason"
                        android:fontFamily="@font/ml"
                        android:paddingRight="8dp"
...
