...
                                android:src="@color/colorAccent" />
                        </androidx.cardview.widget.CardView>

                    </FrameLayout>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fbFavoriteMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="16dp"
                        android:backgroundTint="#fff"
...
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp">

                    <TextView
                        android:id="@+id/tvTitleDetailMovie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:layout_toLeftOf="@+id/movieRuntime"
                        android:fontFamily="@font/ml"
                        android:paddingRight="8dp"
...
