<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="adapter"
            type="com.madfooatcom.movietestlibrary.ui.adapter.MovieAdapter" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <io.supercharge.shimmerlayout.ShimmerLayout
            android:id="@+id/shimmerMovie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:shimmer_animation_duration="800"
            app:shimmer_auto_start="true">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/item_shimmer" />

                    <include layout="@layout/item_shimmer" />

                    <include layout="@layout/item_shimmer" />

                    <include layout="@layout/item_shimmer" />

                    <include layout="@layout/item_shimmer" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </io.supercharge.shimmerlayout.ShimmerLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shimmerMovie"
            android:adapter="@{adapter}"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </RelativeLayout>
</layout>